--- a/Tugas1/detail_article.html
+++ b/Tugas1/detail_article.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Detail Article - Kelompok 7</title>
 
-    <link rel="icon" type="image/png" href="assets/images/logo_utb.png">
+    <link rel="icon" type="image/png" href="assets/images/logo_utb.png" />
 
     <!-- LINK STYLES (Jangan Dihapus)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/assets/styles/main.css" />
 
     <!-- LINK FONT (Jangan Dihapus)-->
@@ -21,15 +26,98 @@
   </head>
   <body>
     <div class="container mt-5 p-0" id="main-container">
-
-      <!-- HEADER -->
+      <!-- HEADER (JS GENERATED) -->
       <div id="header"></div>
 
-      <!-- MULAI NGODING DIDALAM SINI BRO -->
+      <main class="my-4 px-1">
+        <div class="content-box mb-4">
+          <div class="title row">
+            <div class="col-md-10">
+              <h4 class="p-3">Pria Cari Kunci, Ternyata di Tangan</h4>
+            </div>
+            <div class="col-md-2 number-of-yntkts">
+              <h4 class="p-3 justify-content-center text-center">20</h4>
+            </div>
+          </div>
+
+          <div class="my-3">
+            <img
+              src="./assets/images/1340762949_landing_page.jpg"
+              alt="1340762949_landing_page.jpg"
+              class="img-fluid rounded"
+            />
+          </div>
+
+          <div class="mb-5 d-flex flex-column gap-4">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              autem quae illum sed ipsam quo exercitationem, minus numquam
+              necessitatibus dolorum, mollitia sequi similique nisi rerum
+              debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus
+              suscipit aliquam ut optio quia porro qui corporis illo! Accusamus
+              quaerat consectetur quod doloribus molestiae, maxime tenetur quam
+              qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem
+              nisi! Quae asperiores non, quia pariatur perferendis harum eius ea
+              expedita minima, ipsa architecto, laboriosam a consequuntur
+              eveniet in totam aliquam. Similique vero nostrum ex, rerum harum,
+              quis sed modi pariatur iusto, blanditiis saepe deleniti minima
+              optio incidunt ad accusamus reprehenderit!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              autem quae illum sed ipsam quo exercitationem, minus numquam
+              necessitatibus dolorum, mollitia sequi similique nisi rerum
+              debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus
+              suscipit aliquam ut optio quia porro qui corporis illo! Accusamus
+              quaerat consectetur quod doloribus molestiae, maxime tenetur quam
+              qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem
+              nisi! Quae asperiores non, quia pariatur perferendis harum eius ea
+              expedita minima, ipsa architecto, laboriosam a consequuntur
+              eveniet in totam aliquam. Similique vero nostrum ex, rerum harum,
+              quis sed modi pariatur iusto, blanditiis saepe deleniti minima
+              optio incidunt ad accusamus reprehenderit!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              autem quae illum sed ipsam quo exercitationem, minus numquam
+              necessitatibus dolorum, mollitia sequi similique nisi rerum
+              debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus
+              suscipit aliquam ut optio quia porro qui corporis illo! Accusamus
+              quaerat consectetur quod doloribus molestiae, maxime tenetur quam
+              qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem
+              nisi! Quae asperiores non, quia pariatur perferendis harum eius ea
+              expedita minima, ipsa architecto, laboriosam a consequuntur
+              eveniet in totam aliquam. Similique vero nostrum ex, rerum harum,
+              quis sed modi pariatur iusto, blanditiis saepe deleniti minima
+              optio incidunt ad accusamus reprehenderit!
+            </p>
+          </div>
+          <div class="row">
+            <div class="col-md-9">
+              <p class="fst-italic">
+                Written by : <span class="fw-bold">Kelompok 7 - UTB</span>
+              </p>
+              <p class="fst-italic">
+                Tags : <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- OTHER SECTION (JS GENERATED) -->
+        <div id="other_section"></div>
+      </main>
     </div>
 
+    <!-- FOOTER (JS GENERATED) -->
+    <div id="footer"></div>
+
     <!-- JAVASCRIPT (Jangan Dihapus) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script/script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script/main.js"></script>
   </body>
 </html>
