--- a/Tugas1/home.html
+++ b/Tugas1/home.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Kelompok 7</title>
 
-    <link rel="icon" type="image/png" href="assets/images/logo_utb.png">
+    <link rel="icon" type="image/png" href="assets/images/logo_utb.png" />
 
     <!-- LINK STYLES (Jangan Dihapus)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/assets/styles/main.css" />
 
     <!-- LINK FONT (Jangan Dihapus)-->
@@ -21,160 +26,234 @@
   </head>
   <body>
     <div class="container mt-5 p-0" id="main-container">
-      <!-- HEADER -->
+      <!-- HEADER (JS GENERATED) -->
       <div id="header"></div>
 
-      <!-- MULAI NGODING DIDALAM SINI BRO -->
-       <div class="row">
-        <!-- SIDEBAR TINGGAL -->
-        <div class="col-md-8">
-          <!-- Content 1+1x0 -->
-          <div class="content-box mt-5">
-            <div class="title row">
-              <div class="col-md-10 ">
-                <h4 class="p-3">INI JUDUL</h4>
-              </div>
-              <div class="col-md-2 number-of-yntkts">
-                <h4 class="p-3 justify-content-center text-center">20</h4>
-              </div>
-            </div>
-            <div class="mb-5">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas autem quae illum sed ipsam quo exercitationem, minus numquam necessitatibus dolorum, mollitia sequi similique nisi rerum debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus suscipit aliquam ut optio quia porro qui corporis illo! Accusamus quaerat consectetur quod doloribus molestiae, maxime tenetur quam qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia pariatur perferendis harum eius ea expedita minima, ipsa architecto, laboriosam a consequuntur eveniet in totam aliquam. Similique vero nostrum ex, rerum harum, quis sed modi pariatur iusto, blanditiis saepe deleniti minima optio incidunt ad accusamus reprehenderit!</p>
-            </div>
-            <div class="row">
-              <div class="col-md-9">
-                <p class="fst-italic"> Written by : <span class="fw-bold">UTB</span></p>
-                <p class="fst-italic"> Tags : <span class="text-danger">HTML, CSS, JAVASCRIPT</span></p>
-              </div>
-
-              <div class="col-md-3">
-                <a href="/detail_article.html" class="btn btn-success">Continue Reading</a>
-              </div>
-            </div>
-          </div>
-          <!-- Content 90+6 -->
-          <div class="content-box mt-5">
-            <div class="title row">
-              <div class="col-md-10 ">
-                <h4 class="p-3">INI JUDUL</h4>
-              </div>
-              <div class="col-md-2 number-of-yntkts">
-                <h4 class="p-3 justify-content-center text-center">20</h4>
-              </div>
-            </div>
-            <div class="mb-5">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas autem quae illum sed ipsam quo exercitationem, minus numquam necessitatibus dolorum, mollitia sequi similique nisi rerum debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus suscipit aliquam ut optio quia porro qui corporis illo! Accusamus quaerat consectetur quod doloribus molestiae, maxime tenetur quam qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia pariatur perferendis harum eius ea expedita minima, ipsa architecto, laboriosam a consequuntur eveniet in totam aliquam. Similique vero nostrum ex, rerum harum, quis sed modi pariatur iusto, blanditiis saepe deleniti minima optio incidunt ad accusamus reprehenderit!</p>
-            </div>
-            <div class="row">
-              <div class="col-md-9">
-                <p class="fst-italic"> Written by : <span class="fw-bold">UTB</span></p>
-                <p class="fst-italic"> Tags : <span class="text-danger">HTML, CSS, JAVASCRIPT</span></p>
-              </div>
-
-              <div class="col-md-3">
-                <a href="/detail_article.html" class="btn btn-success">Continue Reading</a>
-              </div>
-            </div>
-          </div>
-          <!-- Content 100-7 -->
-          <div class="content-box mt-5">
-            <div class="title row">
-              <div class="col-md-10 ">
-                <h4 class="p-3">INI JUDUL</h4>
-              </div>
-              <div class="col-md-2 number-of-yntkts">
-                <h4 class="p-3 justify-content-center text-center">20</h4>
-              </div>
-            </div>
-            <div class="mb-5">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas autem quae illum sed ipsam quo exercitationem, minus numquam necessitatibus dolorum, mollitia sequi similique nisi rerum debitis, veniam esse atque aperiam reprehenderit. Blanditiis natus suscipit aliquam ut optio quia porro qui corporis illo! Accusamus quaerat consectetur quod doloribus molestiae, maxime tenetur quam qui repellendus, totam, soluta numquam. Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia pariatur perferendis harum eius ea expedita minima, ipsa architecto, laboriosam a consequuntur eveniet in totam aliquam. Similique vero nostrum ex, rerum harum, quis sed modi pariatur iusto, blanditiis saepe deleniti minima optio incidunt ad accusamus reprehenderit!</p>
-            </div>
-            <div class="row">
-              <div class="col-md-9">
-                <p class="fst-italic"> Written by : <span class="fw-bold">UTB</span></p>
-                <p class="fst-italic"> Tags : <span class="text-danger">HTML, CSS, JAVASCRIPT</span></p>
-              </div>
-
-              <div class="col-md-3">
-                <a href="/detail_article.html" class="btn btn-success">Continue Reading</a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-        
-        <!-- SIDEBAR BENAR -->
-        <div class="col-md-4">
-          <div class="content-box mt-5">
-            <!-- Content 1 -->
-            <div class="pb-2">
-              <div class="title">
-                <h4 class="p-3">Stay in touch</h4>
-              </div>
-              <div class="row  stay-text">
-                <div class="col-md-4 stay-number">
-                  <p class="p-3 justify-content-center text-center">999M</p>
+      <main class="my-4 px-1">
+        <div class="row mb-4">
+          <!-- SIDEBAR TINGGAL -->
+          <div class="col-md-8 d-flex flex-column gap-4">
+            <!-- Content -->
+            <div class="content-box">
+              <div class="title row">
+                <div class="col-md-10">
+                  <h4 class="p-3">Pria Cari Kunci, Ternyata di Tangan</h4>
                 </div>
-                <div class="col-md-8">
-                  <P class="p-3">TWITTER FOLLOWER</P>
+                <div class="col-md-2 number-of-yntkts">
+                  <h4 class="p-3 text-center">20</h4>
                 </div>
               </div>
-              <div class="row  stay-text">
-                <div class="col-md-4 stay-number">
-                  <p class="p-3 justify-content-center text-center">999M</p>
+              <div class="mb-5">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  autem quae illum sed ipsam quo exercitationem, minus numquam
+                  necessitatibus dolorum, mollitia sequi similique nisi rerum
+                  debitis, veniam esse atque aperiam reprehenderit. Blanditiis
+                  natus suscipit aliquam ut optio quia porro qui corporis illo!
+                  Accusamus quaerat consectetur quod doloribus molestiae, maxime
+                  tenetur quam qui repellendus, totam, soluta numquam.
+                  Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia
+                  pariatur perferendis harum eius ea expedita minima, ipsa
+                  architecto, laboriosam a consequuntur eveniet in totam
+                  aliquam. Similique vero nostrum ex, rerum harum, quis sed modi
+                  pariatur iusto, blanditiis saepe deleniti minima optio
+                  incidunt ad accusamus reprehenderit!
+                </p>
+              </div>
+              <div class="row">
+                <div class="col-md-9">
+                  <p class="fst-italic">
+                    Written by : <span class="fw-bold">Kelompok 7 - UTB</span>
+                  </p>
+                  <p class="fst-italic">
+                    Tags :
+                    <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
+                  </p>
                 </div>
-                <div class="col-md-8">
-                  <P class="p-3">RSUD FEED SUBCRIBER</P>
+
+                <div class="col-md-3 text-end">
+                  <a href="/detail_article.html" class="btn btn-success"
+                    >Continue Reading</a
+                  >
                 </div>
               </div>
             </div>
-            <!-- Content 2 -->
-            <div class="pt-2">
-              <div class="title">
-                <h4 class="p-3">Kelompok</h4>
+            <!-- Content -->
+            <div class="content-box">
+              <div class="title row">
+                <div class="col-md-10">
+                  <h4 class="p-3">Tikus Curi Camilan, Staf Kantor Heboh!</h4>
+                </div>
+                <div class="col-md-2 number-of-yntkts">
+                  <h4 class="p-3 text-center">20</h4>
+                </div>
               </div>
-              <ul class="list-group">
-                <li class="list-group-item">Asep Supriyadi ( Ketua )</li>
-                <li class="list-group-item">Agung Yuda Pratama ( Wakil Ketua )</li>
-                <li class="list-group-item">Mohammad Reihan Zakya Alawi</li>
-                <li class="list-group-item">M Zuhri Fajarudin</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-       </div>
+              <div class="mb-5">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  autem quae illum sed ipsam quo exercitationem, minus numquam
+                  necessitatibus dolorum, mollitia sequi similique nisi rerum
+                  debitis, veniam esse atque aperiam reprehenderit. Blanditiis
+                  natus suscipit aliquam ut optio quia porro qui corporis illo!
+                  Accusamus quaerat consectetur quod doloribus molestiae, maxime
+                  tenetur quam qui repellendus, totam, soluta numquam.
+                  Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia
+                  pariatur perferendis harum eius ea expedita minima, ipsa
+                  architecto, laboriosam a consequuntur eveniet in totam
+                  aliquam. Similique vero nostrum ex, rerum harum, quis sed modi
+                  pariatur iusto, blanditiis saepe deleniti minima optio
+                  incidunt ad accusamus reprehenderit!
+                </p>
+              </div>
+              <div class="row">
+                <div class="col-md-9">
+                  <p class="fst-italic">
+                    Written by : <span class="fw-bold">Kelompok 7 - UTB</span>
+                  </p>
+                  <p class="fst-italic">
+                    Tags :
+                    <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
+                  </p>
+                </div>
 
-       <div class="row">
-        <div class="col-md-4">
-          <div class="content-box">
-            <div class="title">
-              <h4 class="p-3">Popular Post</h4>
+                <div class="col-md-3 text-end">
+                  <a href="/detail_article.html" class="btn btn-success"
+                    >Continue Reading</a
+                  >
+                </div>
+              </div>
             </div>
-            <ul class="list-group">
-              <li class="list-group-item text-danger">Lorem ipsum dolor sit amet.</li>
-              <li class="list-group-item text-danger">Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-              <li class="list-group-item text-danger">Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-              <li class="list-group-item text-danger">Lorem ipsum dolor sit amet consectetur.</li>
-            </ul>
+            <!-- Content -->
+            <div class="content-box">
+              <div class="title rounded-4 row">
+                <div class="col-md-10">
+                  <h4 class="p-3">Kucing Tetangga Mogok Turun dari Atap</h4>
+                </div>
+                <div class="col-md-2 number-of-yntkts">
+                  <h4 class="p-3 text-center">20</h4>
+                </div>
+              </div>
+              <div class="mb-5">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  autem quae illum sed ipsam quo exercitationem, minus numquam
+                  necessitatibus dolorum, mollitia sequi similique nisi rerum
+                  debitis, veniam esse atque aperiam reprehenderit. Blanditiis
+                  natus suscipit aliquam ut optio quia porro qui corporis illo!
+                  Accusamus quaerat consectetur quod doloribus molestiae, maxime
+                  tenetur quam qui repellendus, totam, soluta numquam.
+                  Voluptatibus ipsa dolorem nisi! Quae asperiores non, quia
+                  pariatur perferendis harum eius ea expedita minima, ipsa
+                  architecto, laboriosam a consequuntur eveniet in totam
+                  aliquam. Similique vero nostrum ex, rerum harum, quis sed modi
+                  pariatur iusto, blanditiis saepe deleniti minima optio
+                  incidunt ad accusamus reprehenderit!
+                </p>
+              </div>
+              <div class="row">
+                <div class="col-md-9">
+                  <p class="fst-italic">
+                    Written by : <span class="fw-bold">Kelompok 7 - UTB</span>
+                  </p>
+                  <p class="fst-italic">
+                    Tags :
+                    <span class="text-danger">HTML, CSS, JAVASCRIPT</span>
+                  </p>
+                </div>
+
+                <div class="col-md-3 text-end">
+                  <a href="/detail_article.html" class="btn btn-success"
+                    >Continue Reading</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- SIDEBAR -->
+          <div class="col-md-4">
+            <div class="content-box h-100">
+              <!-- Content 1 -->
+              <div class="mb-4">
+                <div class="title">
+                  <h4 class="p-3">Stay in touch</h4>
+                </div>
+
+                <div class="d-flex flex-column gap-2">
+                  <div class="row m-0 stay-text rounded-3">
+                    <div class="col-md-4 stay-number">
+                      <div>
+                        <p class="p-3 text-center">999M</p>
+                      </div>
+                    </div>
+                    <div class="col-md-8">
+                      <p class="p-3">TWITTER FOLLOWER</p>
+                    </div>
+                  </div>
+                  <div class="row m-0 stay-text rounded-3">
+                    <div class="col-md-4 stay-number">
+                      <p class="p-3 text-center">999M</p>
+                    </div>
+                    <div class="col-md-8">
+                      <p class="p-3">RSUD FEED SUBCRIBER</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Content 2 -->
+              <div>
+                <div class="title">
+                  <h4 class="p-3">Kelompok 7</h4>
+                </div>
+                <ul class="list-group">
+                  <li class="list-group-item">
+                    <a
+                      href="./detail_profile.html?nama=asep"
+                    >
+                      Agung Yuda Pratama
+                    </a>
+                  </li>
+                  <li class="list-group-item">
+                    <a
+                      href="./detail_profile.html?nama=agung"
+                    >
+                      Asep Supriyadi
+                    </a>
+                  </li>
+                  <li class="list-group-item">
+                    <a
+                      href="./detail_profile.html?nama=reihan"
+                    >
+                      Mohammad Reihan Zakya Alawi
+                    </a>
+                  </li>
+                  <li class="list-group-item">
+                    <a
+                      href="./detail_profile.html?nama=zuhri"
+                    >
+                      Muhammad Zuhri Fajarudin
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-md-8">
-          <div class="content-box">
-            <div class="title">
-              <h4 class="p-3">About Site</h4>
-            </div>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit odit nulla beatae ipsum necessitatibus possimus autem blanditiis dignissimos enim ab voluptatem ad ratione laboriosam quo provident qui cum vitae, delectus laudantium reprehenderit dolorem reiciendis consectetur dicta. Provident iste excepturi similique ad vitae reiciendis dignissimos enim minima nam, doloremque qui dolore?</p>
-          </div>
-        </div>
-       </div>
+
+        <!-- OTHER SECTION (JS GENERATED) -->
+        <div id="other_section"></div>
+      </main>
     </div>
 
-    <footer class="footer mt-5 py-4 text-center text-light bg-dark">
-      Copyright © 2024 Universitas Teknologi Bandung. All Rights Reserved.
-    </footer>
+    <!-- FOOTER (JS GENERATED) -->
+    <div id="footer"></div>
 
     <!-- JAVASCRIPT (Jangan Dihapus) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="script/script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script/main.js"></script>
   </body>
 </html>
